--- a/index.html
+++ b/index.html
@@ -17,7 +17,8 @@
     </div>
 
     <h1 class="intro-name text-white display-5">
-        Akin Gültekin
+        <span class="firstname-a">A</span><span class="firstname-k">k</span><span class="firstname-i">i</span><span class="firstname-n">n</span>
+        <span class="lastname-g">G</span><span class="lastname-u">ü</span><span class="lastname-l">l</span><span class="lastname-t">t</span><span class="lastname-e">e</span><span class="lastname-k">k</span><span class="lastname-i">i</span><span class="lastname-n">n</span>
     </h1>
 
 </body>
