Main Section Buttons

--- a/index.html
+++ b/index.html
@@ -12,7 +12,33 @@
 </head>
 <body>
 
-    
+    <section class="main d-flex h-100 justify-content-center">
+
+        <div class="me d-flex align-items-center justify-content-center">   
+            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
+                <h1> ME </h1>
+            </button> 
+        </div>
+
+        <div class="skills d-flex align-items-center justify-content-center">   
+            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
+                <h1> SKILLS </h1>
+            </button> 
+        </div>
+
+        <div class="projects d-flex align-items-center justify-content-center">   
+            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
+                <h1> PROJECTS </h1>
+            </button> 
+        </div>
+
+        <div class="contact d-flex align-items-center justify-content-center"> 
+            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
+                <h1> CONTACT </h1>
+            </button> 
+        </div>
+
+    </section>
 
 </body>
 </html>
