Main Section Style

--- a/index.html
+++ b/index.html
@@ -15,26 +15,26 @@
     <section class="main d-flex h-100 justify-content-center">
 
         <div class="me d-flex align-items-center justify-content-center">   
-            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
-                <h1> ME </h1>
+            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
+                <h1 class="me-text"> ME </h1>
             </button> 
         </div>
 
         <div class="skills d-flex align-items-center justify-content-center">   
-            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
-                <h1> SKILLS </h1>
+            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
+                <h1 class="skills-text"> SKILLS </h1>
             </button> 
         </div>
 
         <div class="projects d-flex align-items-center justify-content-center">   
-            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
-                <h1> PROJECTS </h1>
+            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
+                <h1 class="projects-text"> PROJECTS </h1>
             </button> 
         </div>
 
         <div class="contact d-flex align-items-center justify-content-center"> 
-            <button type="button" class="main-button btn btn-lg btn-transparent text-white">
-                <h1> CONTACT </h1>
+            <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
+                <h1 class="contact-text"> CONTACT </h1>
             </button> 
         </div>
 
