--- a/index.html
+++ b/index.html
@@ -40,5 +40,27 @@
 
     </section>
 
+    <div class="about container-fluid d-flex h-100">
+        <div class="row">
+            <div class="col d-flex align-items-center justify-content-center text-center text-white">
+                <h1 class="about-title">ME</h1>
+            </div>
+            <div class="col"></div>
+        </div>
+        <div class="row">
+            <div class="col d-flex align-items-center justify-content-center text-center text-white">
+                <h1 class="about-text">
+                    Hi. My name is Akin Gultekin and I am 17. I am a lazy guy who likes computers.
+
+                    I was born in the Netherlands after my parents immigrated here from Turkey.
+                    So the languages I can speak are English, Dutch and Turkish. (I am studying Japanese too).
+                </h1>
+            </div>
+            <div class="myselfie col">
+                <img class="img-fluid" src="/img/me.png">
+            </div>
+        </div>
+    </div>
+
 </body>
 </html>
