Working on Hover Animation

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
         <div class="me d-flex align-items-center justify-content-center">   
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="me-text"> ME </h1>
+                <h1 class="me-hover me-text"> ME </h1>
             </button> 
         </div>
 
         <div class="skills d-flex align-items-center justify-content-center">   
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="skills-text"> SKILLS </h1>
+                <h1 class="skills-hover skills-text"> SKILLS </h1>
             </button> 
         </div>
 
         <div class="projects d-flex align-items-center justify-content-center">   
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="projects-text"> PROJECTS </h1>
+                <h1 class="projects-hover projects-text"> PROJECTS </h1>
             </button> 
         </div>
 
         <div class="contact d-flex align-items-center justify-content-center"> 
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="contact-text"> CONTACT </h1>
+                <h1 class="contact-hover contact-text"> CONTACT </h1>
             </button> 
         </div>
 
@@ -42,18 +42,9 @@
 
     <div class="about container-fluid d-flex h-100">
         <div class="row">
-            <div class="col d-flex align-items-center justify-content-center text-center text-white">
-                <h1 class="about-title">ME</h1>
-            </div>
-            <div class="col"></div>
-        </div>
-        <div class="row">
-            <div class="col d-flex align-items-center justify-content-center text-center text-white">
-                <h1 class="about-text">
+            <div class="col d-flex align-items-center justify-content-center text-white">
+                <h1 class="about-text user-select-none p-5">
                     Hi. My name is Akin Gultekin and I am 17. I am a lazy guy who likes computers.
-
-                    I was born in the Netherlands after my parents immigrated here from Turkey.
-                    So the languages I can speak are English, Dutch and Turkish. (I am studying Japanese too).
                 </h1>
             </div>
             <div class="myselfie col">
@@ -61,6 +52,6 @@
             </div>
         </div>
     </div>
-
+    <script src="/js/main.js"></script>
 </body>
 </html>
