Hover Animation Done

--- a/index.html
+++ b/index.html
@@ -16,25 +16,25 @@
 
         <div class="me d-flex align-items-center justify-content-center">   
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="me-hover me-text"> ME </h1>
+                <h1 class="me-text"> ME </h1>
             </button> 
         </div>
 
         <div class="skills d-flex align-items-center justify-content-center">   
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="skills-hover skills-text"> SKILLS </h1>
+                <h1 class="skills-text"> SKILLS </h1>
             </button> 
         </div>
 
         <div class="projects d-flex align-items-center justify-content-center">   
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="projects-hover projects-text"> PROJECTS </h1>
+                <h1 class="projects-text"> PROJECTS </h1>
             </button> 
         </div>
 
         <div class="contact d-flex align-items-center justify-content-center"> 
             <button type="button" class="main-button btn btn-lg btn-transparent border-0 text-white">
-                <h1 class="contact-hover contact-text"> CONTACT </h1>
+                <h1 class="contact-text"> CONTACT </h1>
             </button> 
         </div>
 
