--- a/index.html
+++ b/index.html
@@ -52,6 +52,37 @@
             </div>
         </div>
     </div>
+
+    <div class="logos container d-flex h-100">
+        <div class="row">
+            <div class="col d-flex align-items-center justify-content-center">
+                <div class="card bg-transparent">
+                    <img class="card-img-top" src="/img/html.png">
+                    <div class="card-body text-center text-white">
+                        <h1 class="card-title">HTML</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex align-items-center justify-content-center">
+                <div class="card bg-transparent">
+                    <img class="card-img-top" src="/img/css.png">
+                    <div class="card-body text-center text-white">
+                        <h1 class="card-title">CSS</h1>
+                    </div>
+                </div>
+            </div>
+            <div class="col d-flex align-items-center justify-content-center">
+                <div class="card bg-transparent">
+                    <img class="card-img-top" src="/img/js.png">
+                    <div class="card-body text-center text-white">
+                        <h1 class="card-title">JS</h1>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+
     <script src="/js/main.js"></script>
 </body>
 </html>
