Contact Section Done

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <body>
 
     <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center">
-        <h1 class="title user-select-none">NAV</h1>
+        <h1 class="title">NAV</h1>
     </div>
 
     <section class="main-section d-flex h-75 justify-content-center">
@@ -44,15 +44,15 @@
 
     </section>
 
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center">
-        <h1 class="title user-select-none">ME</h1>
+    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="me">
+        <h1 class="title">ME</h1>
     </div>
 
     <section class="me-section d-flex h-75 justify-content-center">
 
         <div class="row">
             <div class="about col">
-                <h1 class="about-text text-white user-select-none p-5">
+                <h1 class="about-text text-white p-5">
                     Hi. My name is Akin Gultekin and I am 17. I am a lazy guy who likes computers.
                 </h1>
             </div>
@@ -63,8 +63,8 @@
 
     </section>
 
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center">
-        <h1 class="title user-select-none">SKILLS</h1>
+    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="skills">
+        <h1 class="title">SKILLS</h1>
     </div>
     
     <section class="skills-section d-flex h-75 justify-content-center">
@@ -72,7 +72,7 @@
         <div class="row">
             <div class="html col">
                 <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/html.png" style="max-height: 50vh">
+                    <img class="card-img-top img-fluid" src="/img/html.png">
                     <div class="card-body text-white text-center">
                         <h1 class="html-text">HTML</h1>
                         <div class="progress" style="height: 5vh">
@@ -86,7 +86,7 @@
             </div>
             <div class="css col">
                 <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/css.png" style="max-height: 50vh">
+                    <img class="card-img-top img-fluid" src="/img/css.png">
                     <div class="card-body text-white text-center">
                         <h1 class="css-text">CSS</h1>
                         <div class="progress" style="height: 5vh">
@@ -100,7 +100,7 @@
             </div>
             <div class="js col">
                 <div class="card bg-transparent">
-                    <img class="card-img-top img-fluid" src="/img/js.png" style="max-height: 50vh">
+                    <img class="card-img-top img-fluid" src="/img/js.png">
                     <div class="card-body text-white text-center">
                         <h1 class="js-text">JS</h1>
                         <div class="progress" style="height: 5vh">
@@ -116,14 +116,22 @@
 
     </section>
 
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center">
-        <h1 class="title user-select-none">CONTACT</h1>
+    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="projects">
+        <h1 class="title">PROJECTS</h1>
+    </div>
+
+    <section class="projects-section d-flex h-75 justify-content-center align-items-center text-white text-center">
+
+    </section>
+
+    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="contact">
+        <h1 class="title">CONTACT</h1>
     </div>
 
     <section class="contact-section d-flex h-75 justify-content-center">
         <div class="row">
-            <div class="col-3"></div>
-            <div class="discord col-3">
+            <div class="col"></div>
+            <div class="discord col">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid text-center" src="/img/discord.png">
                     <div class="card-body text-white text-center">
@@ -132,8 +140,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-1"></div>
-            <div class="instagram col-3">
+            <div class="instagram col">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid" src="/img/instagram.png">
                     <div class="card-body text-white text-center">
@@ -142,6 +149,7 @@
                     </div>
                 </div>
             </div>
+            <div class="col"></div>
         </div>
     </section>
 
