--- a/index.html
+++ b/index.html
@@ -44,6 +44,8 @@
 
     </section>
 
+    <div class="container-fluid h-75"></div>
+
     <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="me">
         <h1 class="title">ME</h1>
     </div>
@@ -63,6 +65,8 @@
 
     </section>
 
+    <div class="container-fluid h-75"></div>
+
     <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="skills">
         <h1 class="title">SKILLS</h1>
     </div>
@@ -70,7 +74,7 @@
     <section class="skills-section d-flex h-75 justify-content-center">
 
         <div class="row">
-            <div class="html col">
+            <div class="html col-md">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid" src="/img/html.png">
                     <div class="card-body text-white text-center">
@@ -84,7 +88,7 @@
                     </div>
                 </div>
             </div>
-            <div class="css col">
+            <div class="css col-md">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid" src="/img/css.png">
                     <div class="card-body text-white text-center">
@@ -98,7 +102,7 @@
                     </div>
                 </div>
             </div>
-            <div class="js col">
+            <div class="js col-md">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid" src="/img/js.png">
                     <div class="card-body text-white text-center">
@@ -130,8 +134,8 @@
 
     <section class="contact-section d-flex h-75 justify-content-center">
         <div class="row">
-            <div class="col"></div>
-            <div class="discord col">
+            <div class="col-md"></div>
+            <div class="discord col-md">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid text-center" src="/img/discord.png">
                     <div class="card-body text-white text-center">
@@ -140,16 +144,16 @@
                     </div>
                 </div>
             </div>
-            <div class="instagram col">
+            <div class="instagram col-md">
                 <div class="card bg-transparent">
                     <img class="card-img-top img-fluid" src="/img/instagram.png">
                     <div class="card-body text-white text-center">
                         <h1 class="discord-title">INSTAGRAM</h1>
-                        <p class="discord-text">Azzet#9246</p>
+                        <p class="discord-text">@akgultekin58</p>
                     </div>
                 </div>
             </div>
-            <div class="col"></div>
+            <div class="col-md"></div>
         </div>
     </section>
 
