Projects Section Style

--- a/index.html
+++ b/index.html
@@ -120,13 +120,69 @@
 
     </section>
 
+    <div class="container-fluid h-75"></div>
+
     <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="projects">
         <h1 class="title">PROJECTS</h1>
     </div>
 
-    <section class="projects-section d-flex h-75 justify-content-center align-items-center text-white text-center">
+    <section class="projects-section d-flex h-100 justify-content-center">
 
+        <div class="row row-cols row-cols-md-2 g-0">
+            <div class="col-md">
+              <div class="card bg-transparent">
+                <img src="/img/projects/higherlower.png" class="card-img-top img-fluid rounded-0">
+                <div class="card-body text-white text-center">
+                  <h1 class="card-title">HIGHER OR LOWER</h1>
+                </div>
+              </div>
+            </div>
+            <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/escaperoom.png" class="card-img-top img-fluid rounded-0">
+                  <div class="card-body text-white text-center">
+                    <h1 class="card-title">ESCAPE ROOM</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/tictactoe.png" class="card-img-top img-fluid rounded-0">
+                  <div class="card-body text-white text-center">
+                    <h1 class="card-title">TIC TAC TOE</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/windows10.png" class="card-img-top img-fluid rounded-0">
+                  <div class="card-body text-white text-center">
+                    <h1 class="card-title">WINDOWS 10</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/webcatalogus.png" class="card-img-top img-fluid rounded-0">
+                  <div class="card-body text-white text-center">
+                    <h1 class="card-title">WEBCATALOG</h1>
+                  </div>
+                </div>
+              </div>
+              <div class="col-md">
+                <div class="card bg-transparent">
+                  <img src="/img/projects/webcatalogus.png" class="card-img-top img-fluid rounded-0">
+                  <div class="card-body text-white text-center">
+                    <h1 class="card-title">DASHBOARD</h1>
+                  </div>
+                </div>
+              </div>
+          </div>
+          
     </section>
+
+    <div class="container-fluid h-75"></div>
+    <div class="container-fluid h-75"></div>
 
     <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center" id="contact">
         <h1 class="title">CONTACT</h1>
