--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
               </div>
               <div class="col-md">
                 <div class="card bg-transparent">
-                  <img src="/img/projects/webcatalogus.png" class="card-img-top img-fluid rounded-0">
+                  <img src="/img/projects/dashboard.png" class="card-img-top img-fluid rounded-0">
                   <div class="card-body text-white text-center">
                     <h1 class="card-title">DASHBOARD</h1>
                   </div>
