--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 
-    <div class="container-fluid d-flex h-25 justify-content-center align-items-center text-white text-center">
+    <div class="container-fluid  d-flex h-25 justify-content-center align-items-center text-white text-center">
         <h1 class="title">NAVIGATE</h1>
     </div>
 
@@ -74,7 +74,7 @@
         <h1 class="title">SKILLS</h1>
     </div>
     
-    <section class="skills-section d-flex h-75 justify-content-center">
+    <section class="skills-section d-flex justify-content-center">
 
         <div class="row">
             <div class="col-md">
