--- a/main.html
+++ b/main.html
@@ -225,7 +225,7 @@
                         MY DASHBOARD PAGE OF POKEMONS WHERE YOU CAN SEE <br>
                         HOW MANY STATS EACH POKEMON HAS. 
                     </p>
-                    <a href="">
+                    <a href="https://github.com/ROCMondriaanTIN/sd22-p04-project-dashboard-team-hella-cash-gang-1.git">
                         <button class="project-button">
                             <h1>GO TO GITHUB PAGE</h1>
                         </button>
